CloudAlpacas/salesforce/main/default/objects/Opportunity_Influence_Attribution__c/Opportunity_Influence_Attribution__c.object-meta.xml
<CustomObject>
    <description>Stores opportunity influence attribution records used to connect campaigns, individuals, and opportunities for Marketing opportunity performance reporting and Data Cloud mapping.</description>
    <label>Opportunity Influence Attribution</label>
    <nameField>
        <label>Opportunity Influence Attribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Influence Attributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>