CloudAlpacas/salesforce/main/default/objects/Opportunity_Influence_Attribution__c/fields/Attribution_Model__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Model__c</fullName>
    <description>Attribution model assigned to the influence record.</description>
    <label>Attribution Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIRST_TOUCH</fullName>
            </value>
            <value>
                <fullName>LAST_TOUCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>