CloudAlpacas/salesforce/main/default/objects/Opportunity_Influence_Attribution__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity associated with this opportunity influence attribution record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Influence Attributions</relationshipLabel>
    <relationshipName>Opportunity_Influence_Attributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>