CloudAlpacas/salesforce/main/default/objects/Opportunity_Influence_Attribution__c/fields/Revenue_Share_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Amount__c</fullName>
    <description>Revenue amount attributed to this opportunity influence attribution record.</description>
    <label>Revenue Share Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>